creusot/tests/should_fail/inexhaustive_match.stderr
error[E0004]: non-exhaustive patterns: `Option::Some(_)` not covered
 --> inexhaustive_match.rs:8:11
  |
8 |     match x {
  |           ^ pattern `Option::Some(_)` not covered
  |
note: `Option<()>` defined here
 --> inexhaustive_match.rs:2:5
  |
1 | enum Option<T> {
  |      ------
2 |     Some(T),
  |     ^^^^ not covered
  = note: the matched value is of type `Option<()>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
  |
9 ~         None => (),
10~         Option::Some(_) => todo!(),
  |

warning: load the `creusot_contract` crate to enable resolution of mutable borrows.

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0004`.
